--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.24.0",
     "date-fns": "^2.29.0",
     "jwt-decode": "^3.1.2",
+    "lucide-react": "^0.509.0",
+    "mapbox-gl": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.2.1",
